add animated div

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "clsx": "1.1.1",
     "framer-motion": "2.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
